--- a/index.html
+++ b/index.html
@@ -72,3 +72,4 @@
 <section id="vip" class="page"></section>
 <section id="equipe" class="page"></section>
 <section id="perfil" class="page"></section>
+<script src="script.js"></script>
