--- a/index.html
+++ b/index.html
@@ -73,3 +73,20 @@
 <section id="equipe" class="page"></section>
 <section id="perfil" class="page"></section>
 <script src="script.js"></script>
+<section id="equipe" class="page">
+  <h2>Equipe</h2>
+
+  <input id="codigoConvite" readonly>
+  <button onclick="copiarConvite()">Copiar convite</button>
+</section>
+<section id="perfil" class="page">
+  <h2>Perfil</h2>
+  <button onclick="logout()">Sair</button>
+</section>
+<nav class="bottom-nav">
+  <button onclick="mostrar('home')">Home</button>
+  <button onclick="mostrar('tarefas')">Tarefas</button>
+  <button onclick="mostrar('vip')">VIP</button>
+  <button onclick="mostrar('equipe')">Equipe</button>
+  <button onclick="mostrar('perfil')">Perfil</button>
+</nav>
