--- a/index.html
+++ b/index.html
@@ -109,3 +109,5 @@
   <h3>Histórico de Depósitos</h3>
   <ul id="historicoDeposito"></ul>
 </section>
+<script type="module" src="js/supabase.js"></script>
+<script type="module" src="js/script.js"></script>
